--- a/layman/package.json
+++ b/layman/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.15",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,7 +21,12 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@types/react-speech-recognition": "^3.9.2"
   }
 }
